--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -273,7 +273,7 @@
           font-weight: 400;
           margin-top: 3rem;
           font-size: 2rem;
-          letter-spacing: 0.1em;
+          letter-spacing: 0.2rem;
           color: $color-grey-dark;
 
           @include respond(tab-port) {
